# MultiAgent-ON

./: .gga  .gitignore  main.py  pyproject.toml
.agent/: AGENTS.md  SKILLS.md
.agent/skills/langgraph-expert/: SKILL.md
.agent/skills/pdf-ingest/: SKILL.md
.agent/skills/wiki-protocol/: SKILL.md
.agents/rules/: AGENTS.md  wiki-protocol.md
.agents/skills/langgraph-expert/: SKILL.md
.agents/skills/pdf-ingest/: SKILL.md
.agents/skills/pdf-ingest/assets/: extract_pdf.py
.agents/skills/presentation-designer/: SKILL.md
.agents/skills/pytest-expert/: SKILL.md
.agents/skills/report-generator/: SKILL.md
.agents/skills/wiki-protocol/: SKILL.md
.atl/: skill-registry.md
docs/LLM_Wiki/: index.md  log.md
docs/LLM_Wiki/raw/: llm_mas_memory.txt
docs/LLM_Wiki/raw/Code_for_Felipe/: README.md
docs/features/: qot_tool.md
openspec/: config.yaml
src/: main.py
src/agents/: __init__.py  intent_ingest.py  lightpath.py  pddl_parser.py  plan_synthesizer.py  qot_validation.py  reverse_prompt.py  routing.py  supervisor.py  symbolic_solver.py  topology.py
src/agents/archive/: topology.py
src/core/: constants.py  graph.py  llm.py  models.py  pddl_validator.py  qot_calculator.py  state.py
src/services/: testbed_client.py
src/tools/: fetch_topology.py  qot_tool.py
tests/: lln_integration_test.py  test_graph.py  test_graph_v4.py  test_intent_ingest.py  test_llm.py  test_pddl_validator.py  test_pipeline_nodes.py  test_qot_calculator.py  test_qot_tool.py  test_state.py  test_state_v4.py  test_supervisor.py  test_testbed_client.py  test_topology.py
(+109 files in other folders)
